[package]
name = "diagnostics"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/diagnostics.rs"
doctest = false

[dependencies]
anyhow.workspace = true
collections.workspace = true
component.workspace = true
editor.workspace = true
gpui.workspace = true
language.workspace = true
log.workspace = true
lsp.workspace = true
markdown.workspace = true
project.workspace = true
serde.workspace = true
settings.workspace = true
text.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
editor.workspace = true
gpui.workspace = true
language.workspace = true
markdown.workspace = true
lsp.workspace = true
theme.workspace = true
workspace.workspace = true
