[package]
name = "edit_prediction_button"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/edit_prediction_button.rs"
doctest = false

[dependencies]
anyhow.workspace = true
editor.workspace = true
fs.workspace = true
gpui.workspace = true
indoc.workspace = true
edit_prediction.workspace = true
language.workspace = true
paths.workspace = true
project.workspace = true
regex.workspace = true
settings.workspace = true
supermaven.workspace = true
telemetry.workspace = true
ui.workspace = true
workspace-hack.workspace = true
workspace.workspace = true

[dev-dependencies]
editor.workspace = true
indoc.workspace = true
project.workspace = true
