[package]
name = "zed_extension_api"
version = "0.6.0"
edition.workspace = true
description = "APIs for creating Zed extensions in Rust"
documentation = "https://docs.rs/zed_extension_api"
repository = "https://github.com/zed-industries/zed"
license = "Apache-2.0"
keywords = ["extension", "zed"]
publish = true

[package.metadata.component]
target = { path = "wit" }

[lib]
path = "src/extension_api.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.41"

[lints]
workspace = true

