[package]
name = "feature_flags"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
publish.workspace = true

[lib]
path = "src/feature_flags.rs"

[dependencies]
futures.workspace = true
gpui.workspace = true
smol.workspace = true
workspace-hack.workspace = true

[lints]
workspace = true
