[package]
name = "inspector_ui"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/inspector_ui.rs"

[dependencies]
anyhow.workspace = true
command_palette_hooks.workspace = true
gpui.workspace = true
workspace-hack.workspace = true
workspace.workspace = true
zed_actions.workspace = true
