[package]
name = "language_models"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
publish.workspace = true

[lib]
path = "src/language_models.rs"

[dependencies]
anyhow.workspace = true
client.workspace = true
collections.workspace = true
component.workspace = true
convert_case.workspace = true
credentials_provider.workspace = true
editor.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
language_model.workspace = true
lmstudio = { workspace = true, features = ["schemars"] }
log.workspace = true
menu.workspace = true
mistral = { workspace = true, features = ["schemars"] }
ollama = { workspace = true, features = ["schemars"] }
open_ai = { workspace = true, features = ["schemars"] }
open_router = { workspace = true, features = ["schemars"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
strum.workspace = true
theme.workspace = true
tiktoken-rs.workspace = true
ui.workspace = true
ui_input.workspace = true
util.workspace = true
vercel = { workspace = true, features = ["schemars"] }
workspace-hack.workspace = true
x_ai = { workspace = true, features = ["schemars"] }

[dev-dependencies]
editor.workspace = true
language_model.workspace = true

[lints]
workspace = true
