[package]
name = "language_tools"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
publish.workspace = true

[lib]
doctest = false
path = "src/language_tools.rs"

[dependencies]
anyhow.workspace = true
client.workspace = true
collections.workspace = true
command_palette_hooks.workspace = true
editor.workspace = true
gpui.workspace = true
itertools.workspace = true
language.workspace = true
lsp.workspace = true
project.workspace = true
proto.workspace = true
serde_json.workspace = true
settings.workspace = true
theme.workspace = true
tree-sitter.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
workspace-hack.workspace = true
zed_actions.workspace = true

[dev-dependencies]
editor.workspace = true
gpui.workspace = true
util.workspace = true

[lints]
workspace = true

