[package]
name = "livekit_client"
version = "0.1.0"
edition.workspace = true
description = "Logic for using LiveKit with GPUI"
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[[example]]
name = "test_app"

[features]
test-support = ["collections/test-support", "gpui/test-support"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
collections.workspace = true
cpal.workspace = true
futures.workspace = true
audio.workspace = true
gpui.workspace = true
gpui_tokio.workspace = true
http_client_tls.workspace = true
livekit_api.workspace = true
log.workspace = true
nanoid.workspace = true
parking_lot.workspace = true
postage.workspace = true
settings.workspace = true
tokio-tungstenite.workspace = true
util.workspace = true
workspace-hack.workspace = true

rodio = { workspace = true, features = ["wav_output"] }
libwebrtc = { rev = "5f04705ac3f356350ae31534ffbc476abc9ea83d", git = "https://github.com/zed-industries/livekit-rust-sdks" }
livekit = { rev = "5f04705ac3f356350ae31534ffbc476abc9ea83d", git = "https://github.com/zed-industries/livekit-rust-sdks", features = [
    "__rustls-tls",
] }

core-foundation.workspace = true
core-video.workspace = true
coreaudio-rs = "0.12.1"

[dev-dependencies]
collections = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
sha2.workspace = true
simplelog.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde_json", "coreaudio-rs"]
