[package]
name = "net"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/net.rs"
doctest = false

[dependencies]
smol.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
tempfile.workspace = true
