[package]
name = "rope"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
publish.workspace = true

[package.metadata.cargo-shear]
ignored = ["log"]

[lib]
path = "src/rope.rs"

[dependencies]
arrayvec = "0.7.1"
log.workspace = true
rayon.workspace = true
smallvec.workspace = true
sum_tree.workspace = true
unicode-segmentation.workspace = true
util.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
util.workspace = true

[lints]
workspace = true

