[package]
name = "scheduler"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
publish.workspace = true

[lib]
doctest = false
path = "src/scheduler.rs"

[dependencies]
async-task.workspace = true
chrono.workspace = true
futures.workspace = true
parking.workspace = true
parking_lot.workspace = true
rand.workspace = true
workspace-hack.workspace = true

[lints]
workspace = true

