[package]
name = "semantic_index"
description = "Process, chunk, and embed text as vectors for semantic search."
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/semantic_index.rs"

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
blake3.workspace = true
collections.workspace = true
feature_flags.workspace = true
fs.workspace = true
futures-batch.workspace = true
futures.workspace = true
gpui.workspace = true
heed.workspace = true
http_client.workspace = true
language.workspace = true
language_model.workspace = true
log.workspace = true
open_ai.workspace = true
parking_lot.workspace = true
project.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
sha2.workspace = true
smol.workspace = true
streaming-iterator.workspace = true
theme.workspace = true
tree-sitter.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
worktree.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
fs.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
language.workspace = true
project.workspace = true
util.workspace = true
workspace.workspace = true
worktree.workspace = true
