[package]
name = "supermaven"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/supermaven.rs"
doctest = false

[dependencies]
anyhow.workspace = true
client.workspace = true
collections.workspace = true
futures.workspace = true
gpui.workspace = true
language.workspace = true
log.workspace = true
postage.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
supermaven_api.workspace = true
text.workspace = true
ui.workspace = true
util.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
gpui.workspace = true
language.workspace = true
util.workspace = true
