[package]
name = "terminal_view"
version = "0.1.0"
edition.workspace = true
license = "GPL-3.0-or-later"
publish.workspace = true

[package.metadata.cargo-shear]
ignored = ["log"]

[lib]
doctest = false
path = "src/terminal_view.rs"

[dependencies]
anyhow.workspace = true
async-recursion.workspace = true
breadcrumbs.workspace = true
collections.workspace = true
db.workspace = true
dirs.workspace = true
editor.workspace = true
futures.workspace = true
gpui.workspace = true
itertools.workspace = true
language.workspace = true
log.workspace = true
project.workspace = true
regex.workspace = true
schemars.workspace = true
search.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
shellexpand.workspace = true
smol.workspace = true
task.workspace = true
terminal.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
workspace-hack.workspace = true
zed_actions.workspace = true

[dev-dependencies]
editor.workspace = true
gpui.workspace = true
project.workspace = true
workspace.workspace = true

[lints]
workspace = true

