[package]
name = "title_bar"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/title_bar.rs"
doctest = false

[features]
default = []

[dependencies]
anyhow.workspace = true
auto_update.workspace = true
call.workspace = true
chrono.workspace = true
client.workspace = true
cloud_llm_client.workspace = true
db.workspace = true
gpui.workspace = true
project.workspace = true
remote.workspace = true
rpc.workspace = true
schemars.workspace = true
serde.workspace = true
settings.workspace = true
keymap_editor.workspace = true
smallvec.workspace = true
telemetry.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
zed_actions.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
call.workspace = true
client.workspace = true
gpui.workspace = true
project.workspace = true
rpc.workspace = true
settings.workspace = true
util.workspace = true
workspace.workspace = true
